# libcsd

./: .clang-format  csd.pc  install.sh  meson.build  readme
incl/libcsd/: all.h  box.h  bytes.h  detail.h  error.h  format.h  iterator.h  list.h  map.h  maybe.h  print.h  rc.h  routine.h  str.h
incl/mint/: box.h  detail.h  error.h  list.h  maybe.h  print.h  rc.h  stack_str.h  str.h
include/libcsd/: all.h  args.h  box.h  bytes.h  detail.h  error.h  file.h  format.h  iterator.h  list.h  map.h  maybe.h  path.h  print.h  rc.h  routine.h  str.h  stream.h  thread.h
scripts/: build  config  install  readme
src/: args.cc  bytes.cc  error.cc  file.cc  list.cc  mem_type.cc  path.cc  print.cc  str.cc  stream.cc  thread.cc
